Ajout de la méthode findAllLogins dans PendingAccountRepository et mise à jour de SellerService pour filtrer les vendeurs sans demandes en cours.