@@ -2,17 +2,21 @@ package com.optitop.optitop_api.service;
 
 import com.optitop.optitop_api.dto.SellerDTO;
 import com.optitop.optitop_api.repository.SellerRepository;
+import com.optitop.optitop_api.repository.PendingAccountRepository;
 import org.springframework.stereotype.Service;
-import java.util.Comparator;
 import java.util.List;
+import java.util.stream.Collectors;
 
 @Service
 public class SellerService {
 
     private final SellerRepository sellerRepository;
+    private final PendingAccountRepository pendingAccountRepository;
 
-    public SellerService(SellerRepository sellerRepository) {
+    public SellerService(SellerRepository sellerRepository,
+            PendingAccountRepository pendingAccountRepository) {
         this.sellerRepository = sellerRepository;
+        this.pendingAccountRepository = pendingAccountRepository;
     }
 
     /**
@@ -21,10 +25,13 @@ public class SellerService {
      * @return Liste des vendeurs disponibles
      */
     public List<SellerDTO> findAvailableSellers() {
-        return sellerRepository.findAllByUserIsNull()
-                .stream()
+        // Récupérer tous les logins avec des demandes en cours
+        List<String> pendingLogins = pendingAccountRepository.findAllLogins();
+
+        // Récupérer tous les sellers et filtrer ceux qui n'ont pas de demande en cours
+        return sellerRepository.findAllByUserIsNull().stream()
+                .filter(seller -> !pendingLogins.contains(seller.getSellerRef()))
                 .map(seller -> new SellerDTO(seller.getSellerRef()))
-                .sorted(Comparator.comparing(SellerDTO::sellerRef))
-                .toList();
+                .collect(Collectors.toList());
     }
 }
